Changelog
=========

1.0 (UNRELEASED)
-------------------

- Fix to be able to add the plugin through the ZMI
  [erral]


1.0b2 (2012-10-16)
-------------------

- FaceBook users are now PloneUsers
  [erral]

- Implement user search in storage
  [erral]

- Get properties from self data storage instead of relying on Session
  [erral]

- Change user action name not to clash with Plone's login
  [erral]


1.0b1 (2012-07-13)
-------------------

- Initial release
  [erral]